2001-05-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	Another attempt to MouseFocus transition

2001-05-03  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4:
	enabled and fixed imlib test;
	don't write all verbose tips for imlib to stdout, but to config.log

2001-05-02  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/events.c (HandleEnterNotify): Backout fixed MouseFocus
	transition w/ neverfocus and clicktofocus change and some debug stmts.

2001-05-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleConfigureRequest):
	(HandleConfigureRequest):
	Applied Tk drawing after restack patch by Slaven Rezic
	(HandleEnterNotify):
	fixed MouseFocus transition w/ neverfocus and clicktofocus

2001-05-01  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/misc.c:
	added missing #include <time.h> needed for FVWM_DEBUG_TIME

	* configure.in:
	* acconfig.h:
	* fvwm/functions.c (execute_function):
	* INSTALL.fvwm:
	added --enable-command-log configure option using FVWM_COMMAND_LOG
	for logging all executed commands, this also enables reporting times

	* INSTALL:
	restored previous underlying style using '='

2001-04-28  Dan Espen  <dane@mk.telcordia.com>

	* libs/Graphics.c (AllocNonlinearGradient): Removed aborts from
	gradient calculation consistency checks.

2001-04-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	(HandleLeaveNotify):
	tried to fix focus/grab interaction

2001-04-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1 (Note):
	slightly better explanation of context window in functions

	* fvwm/stack.c (mark_transient_subtree):
	fixed collection of transients on same layer

2001-04-23  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/placement.c (PlaceWindow): Ungrab the pointer when window
	disappears during placement.

2001-04-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (AddWindow):
	Explicitly destroy a window at the end of the function if the client