@@ -1,3 +1,8 @@
+2001-05-04  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm-config.in:
+	report gdk-imlib support in FvwmGtk, rename gnome support to gnome-wm
+
 2001-04-09  Dan Espen  <dane@mk.telcordia.com>
 
 	* make_fvwmdist.sh: Figure our user full name.
